syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.jxc.readapis.grpc";

message ArticleRequestId {
    string id = 1;
}

message ArticleRequestOwner {
    string owner = 1;
}

message Article {
    string id = 1;
    string url = 2;
    string owner = 3;
    string sharedBy = 4;
    repeated string tags = 5;
    repeated string suggestedTags = 6;
}

message ArticleList {
    repeated Article article = 1;
}

service ArticleService {
    rpc findArticleByID(ArticleRequestId) returns (Article);
    rpc findArticlesByOwner(ArticleRequestOwner) returns (ArticleList);
}